tests/fixtures/compile_errors/bad_map.fe
contract Foo:
    x: map<u8, u8, u8>
